--- a/Ai18nWithoutxml/pom.xml
+++ b/Ai18nWithoutxml/pom.xml
@@ -38,11 +38,29 @@
     <artifactId>spring-webmvc</artifactId>
     <version>5.1.1.RELEASE</version>
 </dependency>
+
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>5.1.1.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>5.1.1.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>5.1.1.RELEASE</version>
+</dependency>
+
 <dependency>
 	<groupId>log4j</groupId>
 	<artifactId>log4j</artifactId>
 	<version>1.2.17</version>
 </dependency>
+
   </dependencies>
   <build>
     <finalName>Ai18nWithoutxml</finalName>
