--- a/Ai18nWithoutxml/pom.xml
+++ b/Ai18nWithoutxml/pom.xml
@@ -56,9 +56,22 @@
 </dependency>
 
 <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.1.1.RELEASE</version>
+</dependency>
+
+
+<dependency>
 	<groupId>log4j</groupId>
 	<artifactId>log4j</artifactId>
 	<version>1.2.17</version>
+</dependency>
+
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.197</version>
 </dependency>
 
   </dependencies>
