--- a/Ai18nWithoutxml/pom.xml
+++ b/Ai18nWithoutxml/pom.xml
@@ -61,6 +61,11 @@
     <version>5.1.1.RELEASE</version>
 </dependency>
 
+<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-taglibs</artifactId>
+	<version>5.1.1.RELEASE</version>
+</dependency>
 
 <dependency>
 	<groupId>log4j</groupId>
